作业二/EigenDLL/EigenDLL/x64/Debug/EigenDLL.log
  Compiling CUDA source file EigenDLL_GPU.cu...
  
  C:\Users\xl425\Desktop\EigenDLL>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "D:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.41.34120\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include" -I"C:\Users\xl425\Desktop\eigen-3.4.0\eigen-3.4.0" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include"  -G   --keep-dir EigenDLL\x64\Debug  -maxrregcount=0    --machine 64 --compile -cudart static  -g  -D_DEBUG -DEIGENDLL_EXPORTS -D_WINDOWS -D_USRDLL -D_WINDLL -D_UNICODE -DUNICODE -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/FdEigenDLL\x64\Debug\vc143.pdb" -o C:\Users\xl425\Desktop\EigenDLL\EigenDLL\x64\Debug\EigenDLL_GPU.cu.obj "C:\Users\xl425\Desktop\EigenDLL\EigenDLL_GPU.cu" 
C:\Users\xl425\Desktop\EigenDLL\EigenDLL_GPU.cu(44): error : identifier "cusolverDnDgeev_bufferSize" is undefined
CUDACOMPILE : { cusolverStatus_t status = (cusolverDnDgeev_bufferSize( handle, CUSOLVER_EIG_MODE_NOVECTOR, 100, d_matrix, 100, d_real, d_imag, nullptr, 100, nullptr, 100, &lwork )); if (status != CUSOLVER_STATUS_SUCCESS) { fprintf((__acrt_iob_func(2)), "cuSOLVER error [%s: %d]: %d\n", "C:\\Users\\xl425\\Desktop\\EigenDLL\\EigenDLL_GPU.cu", 57, (int)status); exit(1); } };
                                         ^
  
C:\Users\xl425\Desktop\EigenDLL\EigenDLL_GPU.cu(63): error : identifier "cusolverDnDgeev" is undefined
CUDACOMPILE : { cusolverStatus_t status = (cusolverDnDgeev( handle, CUSOLVER_EIG_MODE_NOVECTOR, 100, d_matrix, 100, d_real, d_imag, nullptr, 100, nullptr, 100, d_work, lwork, d_info )); if (status != CUSOLVER_STATUS_SUCCESS) { fprintf((__acrt_iob_func(2)), "cuSOLVER error [%s: %d]: %d\n", "C:\\Users\\xl425\\Desktop\\EigenDLL\\EigenDLL_GPU.cu", 78, (int)status); exit(1); } };
                                         ^
  
  2 errors detected in the compilation of "C:/Users/xl425/Desktop/EigenDLL/EigenDLL_GPU.cu".
CUDACOMPILE : nvcc warning : Support for offline compilation for architectures prior to '<compute/sm/lto>_75' will be removed in a future release (Use -Wno-deprecated-gpu-targets to suppress warning).
  EigenDLL_GPU.cu
D:\Program Files\Microsoft Visual Studio\2022\Professional\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 12.9.targets(801,9): error MSB3721: 命令“"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "D:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.41.34120\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include" -I"C:\Users\xl425\Desktop\eigen-3.4.0\eigen-3.4.0" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include"  -G   --keep-dir EigenDLL\x64\Debug  -maxrregcount=0    --machine 64 --compile -cudart static  -g  -D_DEBUG -DEIGENDLL_EXPORTS -D_WINDOWS -D_USRDLL -D_WINDLL -D_UNICODE -DUNICODE -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/FdEigenDLL\x64\Debug\vc143.pdb" -o C:\Users\xl425\Desktop\EigenDLL\EigenDLL\x64\Debug\EigenDLL_GPU.cu.obj "C:\Users\xl425\Desktop\EigenDLL\EigenDLL_GPU.cu"”已退出，返回代码为 2。
